--- a/4 Ano/Ingenieria del Software II/Soluciones/Practica 1.lyx
+++ b/4 Ano/Ingenieria del Software II/Soluciones/Practica 1.lyx
@@ -2790,7 +2790,7 @@ COMPLETAR.
 \noun on
 Administrador de eventos
 \noun default
-: Diseñe un módulo que que represente un administradorde eventos.
+: Diseñe un módulo que que represente un administrador de eventos.
  Los eventos que administra tienen un nombre, una cantidad de parámetros
  fija pero (posiblemente) de diferentes tipos.
  El módulo debe mantener una tabla dinámica que relaciona eventos con procedimie
@@ -2812,23 +2812,23 @@ COMPLETAR.
 \noun on
 Mantenimiento de catálogos
 \noun default
-: Una compañı́a de venta por correo ha decidido establecer una serie de
- almacenes regionales relativamente autónomos.
+: Una compañía de venta por correo ha decidido establecer una serie de almacenes
+ regionales relativamente autónomos.
  Cada uno de ellos adquiere responsabilidad local para la gestión de catálogos
  y el procesamiento de pedidos.
  Cada almacén mantiene catálogos lo más adecuados posibles al mercado local.
- La lı́nea especı́fica de productos que gestiona cada almacén pude cambiar
- de una región a otra; además, la lı́nea de productos gestionada por una
+ La línea específica de productos que gestiona cada almacén puede cambiar
+ de una región a otra; además, la línea de productos gestionada por una
  región dada tiende a actualizarse una vez al año según los gustos de los
  consumidores.
- La compañı́a desea tener un sistema de seguimiento de catálogos y pedidos
+ La compañía desea tener un sistema de seguimiento de catálogos y pedidos
  común para todos los almacenes.
  Las funciones claves del sistema incluyen:
 \end_layout
 
 \begin_deeper
 \begin_layout Itemize
-Gestionar mercancı́as al entrar al almacén, expedidas por distintos proveedores.
+Gestionar mercancías al entrar al almacén, expedidas por distintos proveedores.
 \end_layout
 
 \begin_layout Itemize
@@ -2872,7 +2872,7 @@ COMPLETAR.
 \noun on
 Estación climatométrica
 \noun default
-: Este sistema proporcionará monitorización automáticade varias condiciones
+: Este sistema proporcionará monitorización automática de varias condiciones
  climatológicas.
 \end_layout
 
